# grocery_scanner

./: .gitignore  Dockerfile  Procfile  README.md  TODO  app_railway.py  nixpacks.toml  pyproject.toml  railway.json  render.yaml  requirements.txt
src/: app.py  config.py  find_barcode.ipynb  find_barcode.py  main.py  routes.py  services.py
src/static/js/: scan.js
src/templates/: index.html  scan.html
